# FakeIT

./: .env.example  .gitignore  Dockerfile  README.md  check_bands.py  docker-compose.yml  environment.yml  fakeit.db  infer.py  pyproject.toml  requirements.txt  uncloud.db
api/: client.py
backend/: __init__.py  main.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: __init__.py  auth.py  download.py  history.py  predict.py  upload.py
backend/app/core/: __init__.py  config.py  deps.py  (+1 more)
backend/routes/: datasets.py  inference.py  satellite.py  training.py
backend/services/: bhoonidhi_client.py  inference_service.py  satellite_service.py
backend/tests/: test_health.py
backend/utils/: save_tiff.py
common/: __init__.py  config.py  logging.py
config/: default.yaml
data/manifests/: manifest.csv
database/: init_db.py  models.py
datasets/: __init__.py  auxiliary.py  bhoonidhi_client.py  builder.py  connection.py  init_db.py
deployment/: kubernetes.backend.yaml
docs/: api.md  architecture.md  dataset_preparation.md  example_bhoonidhi_query.json  inference.md  installation.md  research_notes.md  training.md
evaluation/: metrics.py  report.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BeforeAfterSlider.tsx  MetricGrid.tsx
frontend/lib/: api.ts  geotiffPreview.ts
models/: __init__.py  base.py  cgan.py  components.py  diffusion.py  factory.py  losses.py  restormer_model.py  transformer.py  unet.py
preprocessing/: __init__.py  cloud_masks.py  geospatial.py  pipeline.py
scripts/: download_auxiliary.py  download_bhoonidhi.py  preprocess_scene.py  run_pipeline.py
tests/: test_auxiliary.py  test_bhoonidhi_client.py  test_config.py  test_metrics.py
training/: datamodule.py  inference.py  train.py
uncloud_it.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
visualization/: __init__.py  figures.py
(+6 files in other folders)
