[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncloud-it"
version = "0.1.0"
description = "Generative cloud removal and surface reconstruction for LISS-IV imagery using multi-modal remote-sensing data."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "UNCLOUND IT" }]
dependencies = [
  "accelerate>=0.33",
  "aiofiles>=24.1",
  "albumentations>=1.4",
  "boto3>=1.34",
  "diffusers>=0.29",
  "email-validator>=2.2",
  "fastapi>=0.111",
  "geopandas>=1.0",
  "httpx>=0.27",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "pandas>=2.2",
  "planetary-computer>=1.0",
  "pillow>=10.4",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "pytorch-lightning>=2.3",
  "PyYAML>=6.0",
  "rasterio>=1.3",
  "rio-cogeo>=5.3",
  "scikit-image>=0.24",
  "scipy>=1.14",
  "shapely>=2.0",
  "SQLAlchemy>=2.0",
  "tensorboard>=2.17",
  "torch>=2.3",
  "torch-fidelity>=0.3",
  "torchmetrics>=1.4",
  "torchvision>=0.18",
  "tqdm>=4.66",
  "transformers>=4.43",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
  "wandb>=0.17"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-mock>=3.14", "ruff>=0.5", "mypy>=1.10", "types-PyYAML>=6.0"]

[project.scripts]
uncloud-train = "training.train:main"
uncloud-build-dataset = "datasets.builder:main"
uncloud-evaluate = "evaluation.report:main"

[tool.setuptools.packages.find]
include = ["backend*", "common*", "datasets*", "evaluation*", "models*", "preprocessing*", "training*", "visualization*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
pythonpath = ["."]
